--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,9 +1,29 @@
 {
-    // See https://go.microsoft.com/fwlink/?LinkId=733558
-    // for the documentation about the tasks.json format
-    "version": "0.1.0",
-    "command": "${workspaceRoot}/.vscode/build.bat",
-    "isShellCommand": true,
-    "args": ["-g", "solve.c"],
-    "showOutput": "always"
+  "version": "2.0.0",
+  "command": "${workspaceRoot}/.vscode/build.bat",
+  "args": [
+    "-g",
+    "solve.c"
+  ],
+  "tasks": [
+    {
+      "type": "shell",
+      "label": "gcc build active file",
+      "command": "/usr/bin/gcc",
+      "args": [
+        "${workspaceRoot}/project/mains/solve.c",
+        "-g",
+        "-o",
+        "${workspaceRoot}/project/compiled/solve"
+      ],
+      "options": {
+        "cwd": "/usr/bin"
+      },
+      "problemMatcher": [],
+      "group": {
+        "kind": "build",
+        "isDefault": true
+      }
+    }
+  ]
 }
