--renamed bfs class --improved logic in factory class

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/project/compiled/solve",
-            "args": ["${workspaceFolder}/project/images/tiny.png", "${workspaceFolder}/project/solvedimages/solvedImage.png", "breadthfirst"],
+            "args": ["${workspaceFolder}/project/images/normal.png", "${workspaceFolder}/project/solvedimages/solvedImage.png", "breadthfirst"],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
@@ -18,7 +18,7 @@
             "type": "cppvsdbg",
             "request": "launch",
             "program": "${workspaceRoot}/project/compiled/solve.exe",
-            "args": ["", "${workspaceRoot}/project/images/tiny.png", "${workspaceRoot}/project/solvedimages/solvedImage.png", "breadthfirst"],
+            "args": ["", "${workspaceRoot}/project/images/normal.png", "${workspaceRoot}/project/solvedimages/solvedImage.png", "breadthfirst"],
             "stopAtEntry": false,
             "cwd": "${workspaceRoot}",
             "environment": [],
